--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <p class="max-w-2xl mx-auto text-gray-700">
       I’m a Computer Engineering student at the University of Waterloo, a varsity volleyball athlete,
       and a member of UW Rocketry’s electrical subteam.. I chose computer engineering because I have 
-      always been impressed by how code and hardware work together. PCB's are my latest fixation. When I am
+      always been impressed by how code and hardware work together. Lately, I have been really interested in PCBs. When I am
       not studying or playing volleyball, I love to spend time hiking or camping. 
     </p>
   </section>
@@ -186,8 +186,7 @@
       <div class="w-full md:w-1/2">
         <h3 class="text-2xl font-bold mb-3">Pacesetter Co-op — Angular & Hardware</h3>
         <p class="text-gray-700 leading-relaxed">
-          I joined to modernize a production Angular app: migrating from v14 → v19, untangling deprecated APIs,
-          and refactoring shared components. I also added theming (including dark mode). While shipping
+          I joined to modernize a production Angular app: migrating from v14 → v19 and untangle deprecated APIs.. I also added theming (including dark mode). While shipping
           UI work, I also got pulled into the lab side: reading EM-MWD data, helping triage PCB repairs, and improving
           the hand-off between firmware changes and bench validation. I learned a ton because I had the opportunity to work
           with a codebase used create and monitor electromagnetic tools, and then design directly with said 
@@ -214,11 +213,11 @@
       <div class="w-full md:w-1/2">
         <h3 class="text-2xl font-bold mb-3">Varsity Volleyball — Systems Thinking, Under Pressure</h3>
         <p class="text-gray-700 leading-relaxed">
-          Volleyball keeps my analytical skills sharp. One of the pillars of our system is preperation, 
-          because things happen so fast on the court, we have to be prepared. We watch film and game plan 
+          Volleyball keeps my analytical skills sharp. One of the pillars of our system is preparation. 
+          Since things happen fast on the court, we have to be prepared. We watch film and game plan 
           for each opponent, and reflect heavily on each practice. We set goals each Monday, and work towards
           them throughout the week. My point is: we build good habits when training, and that has
-          translated into my acedemic and everyday life. 
+          translated into my academic and everyday life. 
         </p>
         <p class="mt-4 text-sm text-gray-600"><strong>Skills:</strong> Leadership, feedback loops, fast problem decomposition, planning, goal setting, team systems</p>
       </div>
@@ -244,10 +243,10 @@
       <div class="w-full md:w-1/2">
         <h3 class="text-2xl font-bold mb-3">UW Rocketry — Avionics & Electrical</h3>
         <p class="text-gray-700 leading-relaxed">
-          On the electrical subteam I help with sensor testing, wiring harness layouts, and bringing up PCBs for
+          On the electrical subteam, I help with sensor testing, wiring harness layouts, and bringing up PCBs for
           avionics. I enjoy validating boards: schematic review, continuity check, power-up
           in stages, then firmware smoke tests. The best part is translating “this pin reads weird” into a design
-          that fixes something that would have resulted in a failure.
+          that fixes something that would have failed.
         </p>
         <p class="mt-4 text-sm text-gray-600"><strong>Tech:</strong> STM32, I²C/SPI/UART, level shifting, conformal coating basics, harness strain relief</p>
       </div>
@@ -261,14 +260,13 @@
         <img src="images/3dprinter.png" class="rounded-lg shadow-lg w-full h-auto" alt="3D Printer">
       </div>
       <div class="w-full md:w-1/2">
-        <h3 class="text-2xl font-bold mb-3">3D Printer — Tuning for Useful Parts</h3>
+        <h3 class="text-2xl font-bold mb-3">3D Printer — Set up and Run</h3>
         <p class="text-gray-700 leading-relaxed">
-          Built and tuned a hobby printer into a dependable tool. I calibrated e-steps and flow,
-          chased ringing and Z-banding, and dialed in profiles for PLA, PETG, and ASA. This 3d 
+          Built and set up a hobby printer into a dependable tool. I calibrated e-steps and flow, and set up profiles for PLA, PETG, and ASA. This 3d 
           printer was fully operational just before I graduated grade 10, and is currently operating
           in my high school. 
         </p>
-        <p class="mt-4 text-sm text-gray-600"><strong>Tools:</strong> Cura/PrusaSlicer, calipers, bed leveling, design in Fusion 360</p>
+        <p class="mt-4 text-sm text-gray-600"><strong>Tools:</strong> Cura/PrusaSlicer, callipers, bed levelling, design in Fusion 360</p>
       </div>
     </div>
   </section>
@@ -286,7 +284,7 @@
         </div>
       </div>
       <div class="w-full md:w-1/2">
-        <h3 class="text-2xl font-bold mb-3">Laser Cutter — Networked Workflow</h3>
+        <h3 class="text-2xl font-bold mb-3">Laser Cutter — Workflow and File Sharing</h3>
         <p class="text-gray-700 leading-relaxed">
           I didn’t build the machine, but I made it easier for everyone to use. I connected the shop’s laser cutter
           computer to the other desktops in my school so students could export from Adobe Illustrator and upload their
@@ -344,7 +342,7 @@
       </div>
       <!-- Text -->
       <div class="w-full md:w-1/2">
-        <h3 class="text-2xl font-bold mb-3">Banking Site — Practical UI for Money Stuff</h3>
+        <h3 class="text-2xl font-bold mb-3">Banking Site — Practical UI and DES Encryption</h3>
         <p class="text-gray-700 leading-relaxed">
           Built a small web app with auth, accounts, and transactions. I focused on clarity—zero-friction forms,
           forgiving validation, and tables and charts that were easily understood. I also designed a simplified 
@@ -378,8 +376,8 @@
         <p class="text-gray-700 leading-relaxed">
           Created a fishing-themed game in Java to teach searching and sorting algorithms in a visual and engaging way. 
           Instead of static textbook examples, players see “fish” representing data elements swim across the screen, 
-          while algorithms like linear search, binary search, bubble sort, and quicksort play out in real time. 
-          Each catch or movement shows the logic step-by-step, making the learning process more intuitive and interactive. 
+          while algorithms like gnome sort, bubble sort, insertion sort, and champagne sort play out in real time. 
+          It shows the logic step-by-step, making the learning process more intuitive and interactive. 
           I used this to teach while tutoring high school CS. 
         </p>
         <p class="mt-4 text-sm text-gray-600"><strong>Focus:</strong> Java graphics, algorithm visualization, interactive education</p>
@@ -397,10 +395,10 @@
         <h3 class="text-2xl font-bold mb-3">Rubik’s Cube Robot — Mechatronics and Search</h3>
         <p class="text-gray-700 leading-relaxed">
           I designed a simple jig and drive to grip and rotate the cube, then experimented with a solver pipeline:
-          detect stickers, map colors to a state, run a layer-based or Kociemba-style solver, and execute moves.
+          detect stickers, map colours to a state, run a layer-based or Kociemba-style solver, and execute moves.
           Getting from “works once” to “works reliably” taught me to add homing, end-stops, and clear recovery states.
         </p>
-        <p class="mt-4 text-sm text-gray-600"><strong>Tech:</strong> Servos/steppers, limit switches, basic CV for color detection, search algorithms</p>
+        <p class="mt-4 text-sm text-gray-600"><strong>Tech:</strong> Servos/steppers, limit switches, basic CV for colour detection, search algorithms</p>
       </div>
     </div>
   </section>
@@ -419,7 +417,7 @@
   </div>
   
   <footer class="py-10 text-center bg-gray-900 text-white">
-    <p>&copy; 2025 Spencer Ingram. Built with Tailwind.</p>
+    <p>&copy; 2025 Spencer Ingram.</p>
   </footer>
 
   <!-- Tiny Carousel + Lightbox JS -->
