--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           I joined to modernize a production Angular app: migrating from v14 → v19 and untangle deprecated APIs.. I also added theming (including dark mode). While shipping
           UI work, I also got pulled into the lab side: reading EM-MWD data, helping triage PCB repairs, and improving
           the hand-off between firmware changes and bench validation. The work term was especially insightful because I had the opportunity to work
-          with a codebase used create and monitor electromagnetic tools, and then design directly with said 
+          with a codebase used to create and monitor electromagnetic tools, and then design directly with said 
           technicians and tools. During my last month, I also improved some algorithms and created a system to stifle 
           electromagnetic noise. 
         </p>
