--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <div class="w-full md:w-1/2">
         <h3 class="text-2xl font-bold mb-3">Laser Cutter — Workflow and File Sharing</h3>
         <p class="text-gray-700 leading-relaxed">
-          I didn’t build the machine, but I made it easier for everyone to use. I connected the shop’s laser cutter
+          I created the user interface by connecting the shop’s laser cutter
           computer to the other desktops in my school so students could export from Adobe Illustrator and upload their
           files directly. Instead of carrying USB sticks back and forth, the shop PC pulled jobs straight from a shared
           folder, making the process smoother and cutting downtime.
